--- a/css/escritorio.css
+++ b/css/escritorio.css
@@ -5,6 +5,7 @@ main{
 .heroe{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    align-items: center;
 }
 
 .heroe__info{
@@ -14,7 +15,17 @@ main{
     
 }
 
+.heroe__perfil{
+    margin-bottom: 100px;
+}
+
+.heroe__img{
+    width: 300px;
+    height: 300px;
+}
+
 .heroe__titulo{
+    margin-top: 100px;
     text-align: start;
 }
 
